--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "5.3.4",
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
